--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postprocessing": "^6.37.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-router-dom": "^7.9.4",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0"
   },
