--- a/package.json
+++ b/package.json
@@ -19,23 +19,23 @@
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "lucide-react": "^0.548.0",
-    "next": "16.0.0",
+    "next": "^14.2.33",
     "ogl": "^1.0.11",
     "postprocessing": "^6.37.8",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.9.4",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
     "@types/three": "^0.180.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.33",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "tw-animate-css": "^1.4.0",
